refactor(trace): 优化 WindTraceContext 的变量管理实现
- 将 ConcurrentHashMap 替换为 HashMap 和 Collections.unmodifiableMap
- 移除不必要的构造函数显式声明
- 使用 Collections.unmodifiableMap 替代 Map.copyOf 提高性能
- 保持外部遍历安全的同时减少内存开销